# Agricultural_vehicle_nav_backend

./: CMakeLists.txt  README.md  package.xml
src/: publish_waypoints.cpp  waypoint_checker.cpp  waypoint_subscriber.cpp
src/auto_charge/: CMakeLists.txt  README.md  package.xml
src/auto_charge/src/: auto_charge_manager.cpp
